# mainline

./: .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: sdlc.yaml
libs/hyperapi/: generate_schemas.py  pyproject.toml
libs/hyperapi/src/hyperapi/: __init__.py  jsonschema_to_form.py  rest_schema.py  rest_utils.py
libs/hyperapi/src/hyperapi/_api/: hyperapi.py
libs/hyperapi/src/hyperapi/components/: base.py  form.py  head.py  layout.py  nav.py  page.py  render.py  script.py
libs/hyperapi/src/hyperapi/schemas/: json_schema_meta_schema.py
libs/hyperapi/tests/: factories.py  test_page.py  test_rest_utils.py
mainline-server/: README.md  pyproject.toml
mainline-server/src/mainline_server/: __init__.py  api.py  cli.py  rest_schema.py  rest_utils.py
mainline-server/src/mainline_server/landing_area/: __init__.py  components.py  router.py
mainline-server/src/mainline_server/ui/: page.py  render.py  style.py
mainline-server/src/mainline_server/ui/components/: base.py  head.py  home.py  layout.py  page.py
mainline-server/tests/: factories.py
mainline-server/tests/integration/: conftest.py  test_cli.py  test_health.py  test_landing_area.py
mainline-server/tests/unit/: test_api.py  test_cli.py  test_rest_utils.py
mainline-server/tests/unit/ui/: test_page.py
mainline-server/tests/unit/ui/components/: test_head.py
