[project]
name = "mainline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mainline-server",
]

[tool.uv.sources]
mainline-server = { workspace = true }
hyperapi = { workspace = true }

[tool.uv.workspace]
members = ["mainline-server", "libs/*"]


[dependency-groups]
dev = [
    "beautifulsoup4>=4.12.3",
    "greenlet>=3.1.1",
    "hatch>=1.14.0",
    "ipython>=8.32.0",
    "mypy>=1.14.1",
    "polyfactory>=2.19.0",
    "py-w3c>=0.3.1",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "python-semantic-release>=9.17.0",
    "ruff>=0.9.3",
    "tenacity>=9.0.0",
    "types-beautifulsoup4>=4.12.0.20241020",
]

[tool.pytest.ini_options]
addopts = "--cov=. --cov-report html --cov-report term --cov-fail-under=100"

[tool.ruff.lint]
select = ["E", "F", "I", "PL", "RUF", "FAST"]
ignore = ["RUF012"]
# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
preview = true

[tool.coverage.report]
exclude_lines = [
    "# pragma: no cover",
    "pass\n",
    "raise err",
    'if __name__ == "__main__":'
    ]

[tool.coverage.run]
concurrency = ["thread", "multiprocessing", "greenlet"]
parallel = true
sigterm = true

[tool.mypy]
ignore_missing_imports = true
