[project]
name = "mainline-server"
version = "0.0.1"
description = "Mainline Server - the core server driving the mainline system"
readme = "README.md"
authors = [
    { name = "Mike Cowie", email = "mikecowie@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "dominate>=2.9.1",
    "fastapi[standard]>=0.115.7",
    "structlog>=25.1.0",
    "typer>=0.15.1",
    "uvicorn>=0.34.0",
]

[project.scripts]
mainline-server = "mainline_server:go"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "beautifulsoup4>=4.12.3",
    "greenlet>=3.1.1",
    "ipython>=8.32.0",
    "mypy>=1.14.1",
    "polyfactory>=2.19.0",
    "py-w3c>=0.3.1",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.3",
    "tenacity>=9.0.0",
    "types-beautifulsoup4>=4.12.0.20241020",
]

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report html --cov-report term --cov-fail-under=100"

[tool.ruff.lint]
select = ["E", "F", "I", "PL", "RUF", "FAST"]
ignore = ["RUF012"]
# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
preview = true

[tool.coverage.report]
exclude_lines = [
    "# pragma: no cover",
    "pass\n",
    "raise err",
    'if __name__ == "__main__":'
    ]

[tool.coverage.run]
concurrency = ["thread", "multiprocessing", "greenlet"]
parallel = true
sigterm = true

[tool.mypy]
ignore_missing_imports = true
