[project]
name = "mainline-server"
version = "0.0.1"
description = "Mainline Server - the core server driving the mainline system"
readme = "README.md"
authors = [
    { name = "Mike Cowie", email = "mikecowie@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "dominate>=2.9.1",
    "fastapi[standard]>=0.115.7",
    "hyperapi",
    "structlog>=25.1.0",
    "typer>=0.15.1",
    "uvicorn>=0.34.0",
]

[project.scripts]
mainline-server = "mainline_server:go"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
