[project]
name = "hyperapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Mike Cowie", email = "mikecowie@fastmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "dominate>=2.9.1",
    "fastapi>=0.115.8",
    "structlog>=25.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "datamodel-code-generator[http]>=0.26.5",
    "mypy>=1.15.0",
    "pytest>=8.3.4",
    "ruff>=0.9.4",
]
